--- a/index.html
+++ b/index.html
@@ -26,10 +26,23 @@
 			<hr class="hr2">
 			<p class="mtv"><b>The video for the single became the first ever to be shown on MTV.</b></p>
 		</div>
-		
-
-
 	</header>
+
+
+	<section class="wrapper_facts">	
+		<p class="facts">some interesting facts</p><br>
+		<div class="facts_div">
+			<div class="fl1 fact1">
+				 That’s right, while Elton John and Tim Rice wrote the songs, it was Zimmer who provided the emotional heart of the film’s soundtrack. He even won an Oscar for it. It was the first in a long line of animated features Zimmer would compose music for, from The Prince of Egypt to Kung Fu Panda.
+			</div>
+			<div class="fl1 fact2">
+				Hans’s daughter Zoe is an artist and photographer, while his son, Jake, has followed in his footsteps and is embarking on a career as a film composer. He has another younger son and daughter, Max and Brigitte
+			</div>
+			<div class="fl1 fact3">
+				Zimmer has written music for some of the most successful films and franchises in recent years, bringing to them his inate dramatic sensibility and an envelope-pushing innovative flair. Gladiator will be familiar to millions, not to mention his music for the Pirates of the Caribbean series.
+			</div>	
+		</div>
+	</section>
 
 
 
